Fix issues on mobile

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -2,7 +2,10 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  min-height: 39rem;
+}
+
+.banner--mobile-bottom:not(.banner--stacked):not(.banner--adapt) {
+  height: 39rem;
 }
 
 @media screen and (max-width: 749px) {
@@ -54,10 +57,6 @@
   .banner--stacked .banner__media-half + .banner__media-half {
     order: 1;
   }
-
-  .banner:not(.banner--adapt):not(.banner--stacked) > .banner__media {
-    height: 39rem;
-  }
 }
 
 @media screen and (min-width: 750px) {
@@ -71,6 +70,17 @@
 }
 
 @media screen and (max-width: 749px) {
+  .banner--adapt:not(.banner--mobile-bottom) .banner__content {
+    height: 0;
+    overflow: hidden;
+  }
+
+  .banner--adapt:not(.banner--mobile-bottom) .banner__box {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
   .banner--mobile-bottom .banner__media,
   .banner--stacked:not(.banner--mobile-bottom) .banner__media {
     position: relative;
@@ -92,6 +102,10 @@
   .banner--stacked:not(.banner--mobile-bottom) .banner__content  {
     position: absolute;
     height: 39rem;
+  }
+
+  .banner--stacked.banner--adapt .banner__content {
+    height: auto;
   }
 
   .banner--stacked:not(.banner--adapt) .banner__media {
